[tool.poetry]
name = "test-renovate"
version = "0.0.1"
description = "Test Renovate Configuration"
authors = ["Yaraslau Zhylko <YaraslauZhylko@gmaol.com>"]

[tool.poetry.dependencies]
python = "~3.9.7"
alembic = "1.7.4"
arrow = "0.10.0"
pydantic = {version = "1.9.0", extras = ["email"]}

[tool.poetry.dev-dependencies]
black = {version = "22.3.0", allow-prereleases = true}
isort = "5.10.1"
pre-commit = "2.19.0"
pylama = "8.3.8"
yamllint = "1.26.3"

[tool.black]
line-length = 88
target-version = ['py39']
exclude = '.vscode|.eggs|.venv|ipython_config.py'

[build-system]
requires = ["poetry>=1.1.11"]
build-backend = "poetry.masonry.api"
